TS Condtionals Aufgaben

--- a/index.html
+++ b/index.html
@@ -24,6 +24,15 @@
       <li><a href="./src/aufgaben/ts-conditionals-2_3/index.html">Aufgabe 2_3</a></li>
       <li><a href="./src/aufgaben/ts-conditionals-2_4/index.html">Aufgabe 2_4</a></li>
     </ul>
+    <h1>Aufgaben Part 3</h1>
+    <ul>
+      <li><a href="./src/aufgaben/ts-conditionals-1_1/index.html">Aufgabe (Conitionals) 1_1</a></li>
+      <li><a href="./src/aufgaben/ts-conditionals-1_2/index.html">Aufgabe (Conitionals) 1_2</a></li>
+      <li><a href="./src/aufgaben/ts-conditionals-1_5/index.html">Aufgabe (Conitionals) 1_5</a></li>
+      <li><a href="./src/aufgaben/ts-conditionals-2_5/index.html">Aufgabe (Conitionals) 2_5</a></li>
+      <li><a href="./src/aufgaben/ts-conditionals-2_8/index.html">Aufgabe (Conitionals) 2_8</a></li>
+      <li><a href="./src/aufgaben/ts-conditionals-3_1/index.html">Aufgabe (Conitionals) 3_1</a></li>
+    </ul>
   </div>
   <script type="module" src="/src/main.ts"></script>
 </body>
