--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
 <body>
   <div id="app">
+    <h1>Aufgaben Part 4</h1>
+    <a href="./src/aufgaben/ts-array/index.html">Aufgaben Arrays</a>
     <h1>Aufgaben Part 1</h1>
     <ul>
       <li><a href="./src/aufgaben/ts-var-1_8/index.html">Aufgabe Intro 1_8</a></li>
