Aufgaben: Arrays II

--- a/src/aufgaben/ts-array-II/index.html
+++ b/src/aufgaben/ts-array-II/index.html
@@ -8,17 +8,9 @@
 </head>
 
 <body>
-    <h1>Arrays</h1>
+    <h1>Arrays II</h1>
 
 
-
-    <form>
-        <label for="email">eMail
-            <input type="email" name="email" id="email">
-        </label>
-        <input type="submit" name="formBtn" id="formBtn" value="Check">
-
-    </form>
     <script type="module" src="./main.ts"></script>
 </body>
 
