Aufgaben: Arrays II

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <div id="app">
     <h1>Aufgaben Part 4</h1>
     <a href="./src/aufgaben/ts-array/index.html">Aufgaben Arrays</a>
+    <a href="./src/aufgaben/ts-array-II/index.html">Aufgaben Arrays II</a>
     <h1>Aufgaben Part 1</h1>
     <ul>
       <li><a href="./src/aufgaben/ts-var-1_8/index.html">Aufgabe Intro 1_8</a></li>
