--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <h1>Aufgaben Part 4</h1>
     <a href="./src/aufgaben/ts-array/index.html">Aufgaben Arrays</a>
     <a href="./src/aufgaben/ts-array-II/index.html">Aufgaben Arrays II</a>
+    <a href="./src/aufgaben/ts-array-III/index.html">Aufgaben Arrays Interation III</a>
+    <a href="./src/aufgaben/ts-array-mealplanner/index.html">Aufgabe Arrays Meal Planner</a>
     <h1>Aufgaben Part 1</h1>
     <ul>
       <li><a href="./src/aufgaben/ts-var-1_8/index.html">Aufgabe Intro 1_8</a></li>
