--- a/src/aufgaben/ts-array-III/index.html
+++ b/src/aufgaben/ts-array-III/index.html
@@ -8,7 +8,9 @@
 </head>
 
 <body>
-    <h1>Arrays II</h1>
+    <h1>Arrays Interation III</h1>
+
+    <div id="d1"></div>
     <script type="module" src="./main.ts"></script>
 </body>
 
