Aufgaben: for loop

--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
 
 <body>
   <div id="app">
+    <h1>Aufgaben Part_5</h1>
+    <ul>
+      <li>
+        <a href="./src/aufgaben/ts-for-loop/index.html">Aufgaben for loops</a>
+      </li>
+
+    </ul>
     <h1>Aufgaben Part 4</h1>
     <ul>
       <li>
