Aufgaben: Objekte + Morsecode

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <li>
         <a href="./src/aufgaben/ts-for-loop/index.html">Aufgaben for loops</a>
       </li>
+      <li><a href="./src/aufgaben/ts-objects/index.html">Aufgaben Objekte</a></li>
 
     </ul>
     <h1>Aufgaben Part 4</h1>
