Aufgaben: Enum + Math

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <a href="./src/aufgaben/ts-for-loop/index.html">Aufgaben for loops</a>
       </li>
       <li><a href="./src/aufgaben/ts-objects/index.html">Aufgaben Objekte</a></li>
+      <li><a href="./src/aufgaben/ts-enum/index.html">Aufgaben Enum + Math</a></li>
 
     </ul>
     <h1>Aufgaben Part 4</h1>
