Add Aufgaben: Dom2

--- a/src/aufgaben/ts-dom/index.html
+++ b/src/aufgaben/ts-dom/index.html
@@ -165,6 +165,23 @@
     <h1>Random Pictures 2_6</h1>
     <button id="rndBtn">Click Me</button>
     <div id="output"></div>
+
+
+    <h1>DOM 2</h1>
+    <p>Lorem ipsum dolor sit amet.</p>
+    <p>Lorem ipsum dolor sit amet.</p>
+    <p>Lorem ipsum dolor sit amet.</p>
+    <p>Lorem ipsum dolor sit amet.</p>
+    <button>Button 1</button>
+    <button>Button 2</button>
+    <button>Button 3</button>
+    <button>Button 4</button>
+    <button>Button 5</button>
+    <form>
+        <input type="text" name="" id="inputText" placeholder="Trage etwas ein...">
+        <label for="range">0</label>
+        <input type="range" name="range" id="range">
+    </form>
     <script type="module" src="./main.ts"></script>
 </body>
 
