--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
       </li>
       <li><a href="./src/aufgaben/ts-objects/index.html">Aufgaben Objekte</a></li>
       <li><a href="./src/aufgaben/ts-enum/index.html">Aufgaben Enum + Math</a></li>
+      <li><a href="./src/aufgaben/ts-OOP-I/main_1_2.ts">Aufgaben OOP I</a></li>
+      <li><a href="./src/aufgaben/ts-OOP-II/main_1_3.ts">Aufgaben OOP II</a></li>
 
     </ul>
     <h1>Aufgaben Part 4</h1>
