Fix: Project Zoo - CSS

--- a/src/aufgaben/ts-zoo-project/index.html
+++ b/src/aufgaben/ts-zoo-project/index.html
@@ -7,9 +7,22 @@
     <title>Zoo </title>
 
     <style>
+        body {
+            background-color: rgb(0, 0, 72);
+            color: white;
+        }
+
+        section {
+            width: 150px;
+            margin: 10px;
+            padding: 10px;
+            border-radius: 10px;
+            background-color: rgba(110, 39, 176, 0.594);
+            color: whote;
+        }
+
         form {
             display: flex;
-            width: 200px;
             flex-direction: column;
             align-content: flex-start;
             justify-content: flex-start;
@@ -27,17 +40,94 @@
         #gehege {
             display: grid;
             align-content: center;
-            justify-content: space-around;
-            align-items: center;
+            justify-content: end;
+            align-items: start;
             justify-items: center;
             grid-template-columns: 1fr 1fr;
             gap: 20px;
+        }
+
+        input[type=number],
+        select,
+        input[type=text] {
+            width: 100%;
+            /* padding: 12px 20px; */
+            margin: 8px 0;
+            box-sizing: border-box;
+        }
+
+        button,
+        input[type=button],
+        input[type=submit],
+        input[type=reset] {
+            background-color: #3f5ffe;
+            border: none;
+            color: white;
+            padding: 16px 32px;
+            text-decoration: none;
+            margin: 4px 2px;
+            cursor: pointer;
+            width: 100%;
+        }
+
+        h1 {
+            /* text-align: center; */
+        }
+
+        ul {
+            max-width: 150px;
+            border: 1px solid red;
+            border-radius: 15px;
+            margin: 0px 10px;
+            padding: 5px;
+            text-align: center;
+        }
+
+        li {
+            list-style-type: none;
+            padding: 0;
+        }
+
+        li.popover {
+            position: relative;
+            display: inline-block;
+            padding: 5px 10px;
+            cursor: pointer;
+            border-radius: 5px;
+        }
+
+        li.popover:hover {
+            background-color: #e0e0e0;
+        }
+
+        .popover-content {
+            display: none;
+            /* Initially hidden */
+            position: absolute;
+            top: 100%;
+            /* Position below the list item */
+            left: 50%;
+            transform: translateX(-50%);
+            width: 150px;
+            background-color: #333;
+            color: #fff;
+            text-align: center;
+            padding: 5px;
+            border-radius: 5px;
+            font-size: 14px;
+            z-index: 1;
+            white-space: nowrap;
+        }
+
+        li.popover:hover .popover-content {
+            display: block;
+            /* Show on hover */
         }
     </style>
 </head>
 
 <body>
-    <h1>Zoo</h1>
+    <h1>🙈 Zoo Admin 🦍</h1>
 
     <div id="mainSection">
         <section>
