Fix: Project Zoo - CSS2

--- a/src/aufgaben/ts-zoo-project/index.html
+++ b/src/aufgaben/ts-zoo-project/index.html
@@ -13,7 +13,7 @@
         }
 
         section {
-            width: 150px;
+            width: 180px;
             margin: 10px;
             padding: 10px;
             border-radius: 10px;
@@ -40,11 +40,13 @@
         #gehege {
             display: grid;
             align-content: center;
+            text-align: center;
             justify-content: end;
             align-items: start;
             justify-items: center;
             grid-template-columns: 1fr 1fr;
             gap: 20px;
+            padding: 20px
         }
 
         input[type=number],
@@ -108,7 +110,7 @@
             /* Position below the list item */
             left: 50%;
             transform: translateX(-50%);
-            width: 150px;
+            width: 180px;
             background-color: #333;
             color: #fff;
             text-align: center;
@@ -145,7 +147,7 @@
                 <select id="continentSelect">
                 </select>
 
-                <label for="specialNeedSelect">Spezial Needs:</label>
+                <label for="specialNeedSelect">Special Needs:</label>
                 <select id="specialNeedSelect">
                     <option value="Meat">Meat</option>
                     <option value="Fish">Fish</option>
