--- a/src/aufgaben/project-newsapi/index.html
+++ b/src/aufgaben/project-newsapi/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script type="module" src="./app.ts" defer></script>
     <style>
-        #products {
+        #articles {
             margin-top: 32px;
             display: grid;
             grid-template-columns: 1fr 1fr 1fr;
@@ -18,7 +18,7 @@
         }
 
         @media screen and (max-width: 600px) {
-            #products {
+            #articles {
                 grid-template-columns: 1fr 1fr;
             }
 
